--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,6 +51,9 @@
     --secondary: 173 91% 21%;
     --secondary-foreground: 0 0% 98%;
 
+    --third: hsl(41, 84%, 53%);
+    --third-foreground: 0 0% 98%;
+
     --accent: 39 96% 40%;
     --accent-foreground: 0 0% 98%;
 
@@ -68,12 +71,17 @@
   * {
     @apply border-border;
   }
-  
+
   body {
     @apply font-sans antialiased bg-background text-foreground transition-colors duration-300;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply font-heading;
   }
 }
@@ -103,6 +111,7 @@
     opacity: 0;
     transform: translateY(20px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
